# flamapp-ai-assignment

./: .gitignore  BUILD_NOTES.md  PROJECT_COMPLETION_SUMMARY.md  README.md  RELEASE.md  WARP.md  build.gradle.kts  gradlew  gradlew.bat  local.properties.example  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: simple.frag
app/src/main/cpp/: CMakeLists.txt  processor.cpp  processor.h  processor_jni.cpp
app/src/main/java/com/flamapp/ai/: MainActivity.kt
app/src/main/java/com/flamapp/ai/gl/: GLFrameView.kt  GLRenderer.kt
app/src/main/java/com/flamapp/ai/nativebridge/: NativeProcessor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
scripts/: bootstrap_gradle_wrapper.ps1  bootstrap_gradle_wrapper.sh  pull_processed_sample.ps1  pull_processed_sample.sh  setup_opencv_android.ps1  setup_opencv_android.sh
web/: index.html  package.json  tsconfig.json
web/src/: index.ts
